Z-index issue with layers
Buttons weren't clickable. Found a strange discrepancy with z-indexes between elements to be the issue.

--- a/app/assets/stylesheets/pages/_landing_page.css.scss
+++ b/app/assets/stylesheets/pages/_landing_page.css.scss
@@ -1,5 +1,6 @@
 section#landing-page {
 
+  position: relative;
   height: 100%;
 
   h1 {
@@ -61,19 +62,13 @@ section#landing-page {
     }
   }
 
-  .landing-page-background {
-  
-    height: 100%;
+  .landing-page-background { 
   
     .header-image {
       margin: -30px 0 0 0;
       position: relative;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      z-index: -1;
       min-height: 100%;
+      z-index: 1;
       background-size: cover;
       
       &#header-accounting {
@@ -135,6 +130,7 @@ section#landing-page {
   .calltoaction {
     padding: 100px 0 50px 0;
 	max-width: 1360px;
+	z-index: 2;
 	
 	img {
 	  position: relative;
